# interview-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  app_factory.py  interview_app.py  pyproject.toml
agent/: __init__.py  configuration.py  graph.py  interview_agent.py  model.py  prompts.py  state.py
agent/models/: report.py
agent/tool/: resume.py
configs/: __init__.py  app_config.py  database_config.py  deployment_config.py  duix_config.py  graph_config.py  logging_config.py  rtc_config.py  third_party_config.py
controllers/service_api/: __init__.py
controllers/service_api/app/: app.py  auth.py  interview.py  rtc.py
extensions/: ext_blueprint.py  ext_database.py  ext_logging.py  ext_login.py  ext_websocket.py
libs/: __init__.py  external_api.py  session_manager.py
models/: interview.py  message.py
paz/pipelines/: detection.py
rtc/: track.py
script/: entrypoint.sh  mysql-setup.sh
sql/: init.sql
test/: resume.txt
web/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/login/: page.tsx
web/app/interviews/: page.tsx
web/app/interviews/simulation/: page.tsx
web/app/lib/: webrtcPlayer.ts
web/app/reports/: page.tsx
web/app/reports/result/: page.tsx
web/app/resources/: page.tsx
web/components/: NavBar.tsx  theme-provider.tsx
web/components/ui/: avatar.tsx  button.tsx  card.tsx  sidebar.tsx
web/public/: duix.js
web/styles/: globals.css
web/utils/: request.ts
webrtc/: config.py  event_bus.py  middlewares.py  routes.py  rtc_manager.py  rtc_server.py
webrtc/prompts/: prompt.py
webrtc/track/: audio_track.py  video_track.py
