[project]
name = "interview-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-mysqldb (>=2.0.0,<3.0.0)",
    "dashscope (>=1.23.4,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "aiortc (>=1.13.0,<2.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "gevent-websocket (>=0.10.1,<0.11.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
