[project]
name = "interview-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-mysqldb (>=2.0.0,<3.0.0)",
    "dashscope (>=1.23.4,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "aioice>=0.10.1,<1.0.0",
    "av>=14.0.0,<15.0.0",
    "cryptography>=44.0.0",
    "google-crc32c>=1.1",
    "pyee>=13.0.0",
    "pylibsrtp>=0.10.0",
    "pyopenssl>=25.0.0",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "aiohttp (>=3.12.12,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
